# lfs-verification

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  README.md  lfs.cpp  lfs.h  macros.h
src/tests/: CMakeLists.txt  lfs_tests.cpp
verification/spot/: README.md  install_spot.sh  verify_trace.py  verify_trace.sh
verification/tla/: README.md  lfs.tla
